fix not found support

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+0.4-penelope (Unreleased)
+-------------------------
+
+ - fix problem with exception handling [amleczko]
+
 
 0.3-POR3 (2012/06/06)
 ---------------------
